[package]
name = "wd_eui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.22.0",features = ["__screenshot"]}
tokio = {version = "1.29.1",features = ["full"]}
hyper = {version = "0.14.27",features = ["full"]}
anyhow = "1.0.71"
hyper-tls = "0.5.0"
wd_tools = {version = "0.8.7",features = ["snowflake","sync","time"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
wd_log = "0.2.0"